--- a/PITCHME.css
+++ b/PITCHME.css
@@ -1,5 +1,5 @@
 .reveal {
-	font-family: 'Noto Sans', sans-serif;
+	font-family: 'Calibri', 'Noto Sans', sans-serif;
 	font-size: 20px;
 	font-weight: normal;
 }
