--- a/PITCHME.css
+++ b/PITCHME.css
@@ -1,4 +1,5 @@
-.reveal {
+.reveal .slides>section,
+.reveal .slides>section>section {
 	font-family: 'Calibri', 'Noto Sans', sans-serif;
 	font-size: 20px;
 	font-weight: normal;
