--- a/PITCHME.css
+++ b/PITCHME.css
@@ -1,6 +1,6 @@
 .reveal .slides>section,
 .reveal .slides>section>section {
-	font-family: 'Calibri', 'Noto Sans', sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-size: 32px;
 	font-weight: normal;
 }
