--- a/PITCHME.css
+++ b/PITCHME.css
@@ -3,3 +3,12 @@
 	font-size: 32px;
 	font-weight: normal;
 }
+
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+	font-family: Impact, sans-serif;
+}
